@@ -20,16 +20,16 @@
 <script type="text/javascript">
 /*<![CDATA[*/
 document.writeln("<div id='toolbar'>");
-addButton('../images/button_bold.png','<fmt:message key="edit.button.bold"/>','\'\'\'','\'\'\'','<fmt:message key="edit.button.bold.text"/>');
-addButton('../images/button_italic.png','<fmt:message key="edit.button.italic"/>','\'\'','\'\'','<fmt:message key="edit.button.italic.text"/>');
-addButton('../images/button_underline.png','<fmt:message key="edit.button.underline"/>','<u>','</u>','<fmt:message key="edit.button.underline.text"/>');
-addButton('../images/button_link.png','<fmt:message key="edit.button.internal.link"/>','[[',']]','<fmt:message key="edit.button.internal.link.text"/>');
-addButton('../images/button_extlink.png','<fmt:message key="edit.button.external.link"/>','[',']','<fmt:message key="edit.button.external.link.text"/>');
-addButton('../images/button_headline.png','<fmt:message key="edit.button.head2"/>','\n== ',' ==\n','<fmt:message key="edit.button.head2.text"/>');
-addButton('../images/button_image.png','<fmt:message key="edit.button.image"/>','[[Image:',']]','<fmt:message key="edit.button.image.text"/>');
-addButton('../images/button_nowiki.png','<fmt:message key="edit.button.nowiki"/>','<nowiki>','</nowiki>','<fmt:message key="edit.button.nowiki.text"/>');
-addButton('../images/button_sig.png','<fmt:message key="edit.button.signature"/>','--~~~~','','');
-addButton('../images/button_hr.png','<fmt:message key="edit.button.line"/>','\n----\n','','');
+JAMWiki.Editor.addButton('../images/button_bold.png','<fmt:message key="edit.button.bold"/>','\'\'\'','\'\'\'','<fmt:message key="edit.button.bold.text"/>');
+JAMWiki.Editor.addButton('../images/button_italic.png','<fmt:message key="edit.button.italic"/>','\'\'','\'\'','<fmt:message key="edit.button.italic.text"/>');
+JAMWiki.Editor.addButton('../images/button_underline.png','<fmt:message key="edit.button.underline"/>','<u>','</u>','<fmt:message key="edit.button.underline.text"/>');
+JAMWiki.Editor.addButton('../images/button_link.png','<fmt:message key="edit.button.internal.link"/>','[[',']]','<fmt:message key="edit.button.internal.link.text"/>');
+JAMWiki.Editor.addButton('../images/button_extlink.png','<fmt:message key="edit.button.external.link"/>','[',']','<fmt:message key="edit.button.external.link.text"/>');
+JAMWiki.Editor.addButton('../images/button_headline.png','<fmt:message key="edit.button.head2"/>','\n== ',' ==\n','<fmt:message key="edit.button.head2.text"/>');
+JAMWiki.Editor.addButton('../images/button_image.png','<fmt:message key="edit.button.image"/>','[[Image:',']]','<fmt:message key="edit.button.image.text"/>');
+JAMWiki.Editor.addButton('../images/button_nowiki.png','<fmt:message key="edit.button.nowiki"/>','<nowiki>','</nowiki>','<fmt:message key="edit.button.nowiki.text"/>');
+JAMWiki.Editor.addButton('../images/button_sig.png','<fmt:message key="edit.button.signature"/>','--~~~~','','');
+JAMWiki.Editor.addButton('../images/button_hr.png','<fmt:message key="edit.button.line"/>','\n----\n','','');
 document.writeln("</div>");
 /*]]>*/ 
 </script>
