@@ -49,9 +49,9 @@
 	<c:set var="nextTopicVersionId" value="${change.topicVersionId}" />
 	<c:if test="${numChanges > 1}">
 	&#160;
-	<input type="radio" name="version2" id="ver2_<c:out value="${change.topicVersionId}" />" onclick="historyRadio(this, 'version1', true)" value="<c:out value="${change.topicVersionId}" />" <c:if test="${status.index == 1}">checked="checked"</c:if> <c:if test="${status.first}">style="visibility:hidden"</c:if> />
+	<input type="radio" name="version2" id="ver2_<c:out value="${change.topicVersionId}" />" onclick="JAMWiki.UI.historyRadio(this, 'version1', true)" value="<c:out value="${change.topicVersionId}" />" <c:if test="${status.index == 1}">checked="checked"</c:if> <c:if test="${status.first}">style="visibility:hidden"</c:if> />
 	&#160;
-	<input type="radio" name="version1" id="ver1_<c:out value="${change.topicVersionId}" />" onclick="historyRadio(this, 'version2', false)" value="<c:out value="${change.topicVersionId}" />" <c:if test="${status.first}">checked="checked"</c:if> <c:if test="${status.last}">style="visibility:hidden"</c:if> />
+	<input type="radio" name="version1" id="ver1_<c:out value="${change.topicVersionId}" />" onclick="JAMWiki.UI.historyRadio(this, 'version2', false)" value="<c:out value="${change.topicVersionId}" />" <c:if test="${status.first}">checked="checked"</c:if> <c:if test="${status.last}">style="visibility:hidden"</c:if> />
 	</c:if>
 	&#160;
 	<%-- FIXME: do not hardcode date pattern --%>
@@ -78,7 +78,7 @@
 
 <c:if test="${numChanges > 1}">
 <script type="text/javascript">
-historyRadio(document.getElementById('ver2_<c:out value="${changes[1].topicVersionId}" />'), 'version1', true)
+JAMWiki.UI.historyRadio(document.getElementById('ver2_<c:out value="${changes[1].topicVersionId}" />'), 'version1', true)
 </script>
 </c:if>
 
