@@ -1,164 +1,128 @@
-var noOverwrite=false;
-var alertText;
-var clientPC = navigator.userAgent.toLowerCase(); // Get client info
-var is_gecko = ((clientPC.indexOf('gecko')!=-1) && (clientPC.indexOf('spoofer')==-1)
-                && (clientPC.indexOf('khtml') == -1) && (clientPC.indexOf('netscape/7.0')==-1));
-var is_safari = ((clientPC.indexOf('AppleWebKit')!=-1) && (clientPC.indexOf('spoofer')==-1));
-var is_khtml = (navigator.vendor == 'KDE' || ( document.childNodes && !document.all && !navigator.taintEnabled ));
-if (clientPC.indexOf('opera')!=-1) {
-    var is_opera = true;
-    var is_opera_preseven = (window.opera && !document.childNodes);
-    var is_opera_seven = (window.opera && document.childNodes);
-}
-
-function addButton(imageFile, speedTip, tagOpen, tagClose, sampleText) {
-
-	speedTip=escapeQuotes(speedTip);
-	tagOpen=escapeQuotes(tagOpen);
-	tagClose=escapeQuotes(tagClose);
-	sampleText=escapeQuotes(sampleText);
-	var mouseOver="";
-
-	// we can't change the selection, so we show example texts
-	// when moving the mouse instead, until the first button is clicked
-	if(!document.selection && !is_gecko) {
-		// filter backslashes so it can be shown in the infobox
-		var re=new RegExp("\\\\n","g");
-		tagOpen=tagOpen.replace(re,"");
-		tagClose=tagClose.replace(re,"");
-		mouseOver = "onMouseover=\"if(!noOverwrite){document.infoform.infobox.value='"+tagOpen+sampleText+tagClose+"'};\"";
-	}
-
-	document.write("<a href=\"javascript:insertTags");
-	document.write("('"+tagOpen+"','"+tagClose+"','"+sampleText+"');\">");
-
-        document.write("<img width=\"23\" height=\"22\" src=\""+imageFile+"\" border=\"0\" alt=\""+speedTip+"\" title=\""+speedTip+"\""+mouseOver+">");
-	document.write("</a>");
-	return;
-}
-
-function addInfobox(infoText,text_alert) {
-	alertText=text_alert;
+var JAMWiki = JAMWiki || {};
+JAMWiki.Editor = function() {
+	var alertText;
 	var clientPC = navigator.userAgent.toLowerCase(); // Get client info
-
-	var re=new RegExp("\\\\n","g");
-	alertText=alertText.replace(re,"\n");
-
-	// if no support for changing selection, add a small copy & paste field
-	// document.selection is an IE-only property. The full toolbar works in IE and
-	// Gecko-based browsers.
-	if(!document.selection && !is_gecko) {
- 		infoText=escapeQuotesHTML(infoText);
-	 	document.write("<form name='infoform' id='infoform'>"+
-			"<input size=80 id='infobox' name='infobox' value=\""+
-			infoText+"\" READONLY></form>");
- 	}
-
-}
-
-function escapeQuotes(text) {
-	var re=new RegExp("'","g");
-	text=text.replace(re,"\\'");
-	re=new RegExp('"',"g");
-	text=text.replace(re,'&quot;');
-	re=new RegExp("\\n","g");
-	text=text.replace(re,"\\n");
-	return text;
-}
-
-function escapeQuotesHTML(text) {
-	var re=new RegExp('"',"g");
-	text=text.replace(re,"&quot;");
-	return text;
-}
-
-// apply tagOpen/tagClose to selection in textarea,
-// use sampleText instead of selection if there is none
-// copied and adapted from phpBB
-function insertTags(tagOpen, tagClose, sampleText) {
-
-	var txtarea = document.editForm.contents;
-	// IE
-	if(document.selection  && !is_gecko) {
-		var theSelection = document.selection.createRange().text;
-		if(!theSelection) { theSelection=sampleText;}
-		txtarea.focus();
-		if(theSelection.charAt(theSelection.length - 1) == " "){// exclude ending space char, if any
-			theSelection = theSelection.substring(0, theSelection.length - 1);
-			document.selection.createRange().text = tagOpen + theSelection + tagClose + " ";
-		} else {
-			document.selection.createRange().text = tagOpen + theSelection + tagClose;
-		}
-
-	// Mozilla
-	} else if(txtarea.selectionStart || txtarea.selectionStart == '0') {
- 		var startPos = txtarea.selectionStart;
-		var endPos = txtarea.selectionEnd;
-		var scrollTop=txtarea.scrollTop;
-		var myText = (txtarea.value).substring(startPos, endPos);
-		if(!myText) { myText=sampleText;}
-		if(myText.charAt(myText.length - 1) == " "){ // exclude ending space char, if any
-			subst = tagOpen + myText.substring(0, (myText.length - 1)) + tagClose + " ";
-		} else {
-			subst = tagOpen + myText + tagClose;
-		}
-		txtarea.value = txtarea.value.substring(0, startPos) + subst +
-		  txtarea.value.substring(endPos, txtarea.value.length);
-		txtarea.focus();
-
-		var cPos=startPos+(tagOpen.length+myText.length+tagClose.length);
-		txtarea.selectionStart=cPos;
-		txtarea.selectionEnd=cPos;
-		txtarea.scrollTop=scrollTop;
-
-	// All others
-	} else {
-		var copy_alertText=alertText;
-		var re1=new RegExp("\\$1","g");
-		var re2=new RegExp("\\$2","g");
-		copy_alertText=copy_alertText.replace(re1,sampleText);
-		copy_alertText=copy_alertText.replace(re2,tagOpen+sampleText+tagClose);
-		var text;
-		if (sampleText) {
-			text=prompt(copy_alertText);
-		} else {
-			text="";
-		}
-		if(!text) { text=sampleText;}
-		text=tagOpen+text+tagClose;
-		document.infoform.infobox.value=text;
-		// in Safari this causes scrolling
-		if(!is_safari) {
-			txtarea.focus();
-		}
-		noOverwrite=true;
+	var is_gecko = ((clientPC.indexOf('gecko')!=-1) && (clientPC.indexOf('spoofer')==-1)
+					&& (clientPC.indexOf('khtml') == -1) && (clientPC.indexOf('netscape/7.0')==-1));
+	var is_safari = ((clientPC.indexOf('AppleWebKit')!=-1) && (clientPC.indexOf('spoofer')==-1));
+	function escapeQuotes(text) {
+		var re=new RegExp("'","g");
+		text=text.replace(re,"\\'");
+		re=new RegExp('"',"g");
+		text=text.replace(re,'&quot;');
+		re=new RegExp("\\n","g");
+		text=text.replace(re,"\\n");
+		return text;
 	}
-	// reposition cursor if possible
-	if (txtarea.createTextRange) txtarea.caretPos = document.selection.createRange().duplicate();
-}
-
-// enable/disable radio buttons before or after the current element
-function historyRadio(element, siblingName, disableLower) {
-	// since revision numbers are chronological this code compares revision 
-	// numbers to determine whether to display or hide a radio button
-	var revisionId = parseInt(element.value);
-	var siblings = document.getElementsByName(siblingName);
-	for (var i = 0; i < siblings.length; i++) {
-		// make sure the element is a radio button, if not skip it
-		if (siblings[i].type != 'radio') {
-			continue;
+	return {
+		noOverwrite: false,
+		addButton: function(imageFile, speedTip, tagOpen, tagClose, sampleText) {
+			speedTip=escapeQuotes(speedTip);
+			tagOpen=escapeQuotes(tagOpen);
+			tagClose=escapeQuotes(tagClose);
+			sampleText=escapeQuotes(sampleText);
+			var mouseOver="";
+			// we can't change the selection, so we show example texts
+			// when moving the mouse instead, until the first button is clicked
+			if(!document.selection && !is_gecko) {
+				// filter backslashes so it can be shown in the infobox
+				var re=new RegExp("\\\\n","g");
+				tagOpen=tagOpen.replace(re,"");
+				tagClose=tagClose.replace(re,"");
+				mouseOver = "onMouseover=\"if(!JAMWiki.Editor.noOverwrite){document.infoform.infobox.value='"+tagOpen+sampleText+tagClose+"'};\"";
+			}
+			document.write("<a href=\"javascript:JAMWiki.Editor.insertTags");
+			document.write("('"+tagOpen+"','"+tagClose+"','"+sampleText+"');\">");
+			document.write("<img width=\"23\" height=\"22\" src=\""+imageFile+"\" border=\"0\" alt=\""+speedTip+"\" title=\""+speedTip+"\""+mouseOver+">");
+			document.write("</a>");
+		},
+		// apply tagOpen/tagClose to selection in textarea,
+		// use sampleText instead of selection if there is none
+		// copied and adapted from phpBB
+		insertTags: function(tagOpen, tagClose, sampleText) {
+			var txtarea = document.editForm.contents;
+			// IE
+			if(document.selection  && !is_gecko) {
+				var theSelection = document.selection.createRange().text;
+				if(!theSelection) { theSelection=sampleText;}
+				txtarea.focus();
+				if(theSelection.charAt(theSelection.length - 1) == " "){// exclude ending space char, if any
+					theSelection = theSelection.substring(0, theSelection.length - 1);
+					document.selection.createRange().text = tagOpen + theSelection + tagClose + " ";
+				} else {
+					document.selection.createRange().text = tagOpen + theSelection + tagClose;
+				}
+			// Mozilla
+			} else if(txtarea.selectionStart || txtarea.selectionStart == '0') {
+				var startPos = txtarea.selectionStart;
+				var endPos = txtarea.selectionEnd;
+				var scrollTop=txtarea.scrollTop;
+				var myText = (txtarea.value).substring(startPos, endPos);
+				if(!myText) { myText=sampleText;}
+				if(myText.charAt(myText.length - 1) == " "){ // exclude ending space char, if any
+					subst = tagOpen + myText.substring(0, (myText.length - 1)) + tagClose + " ";
+				} else {
+					subst = tagOpen + myText + tagClose;
+				}
+				txtarea.value = txtarea.value.substring(0, startPos) + subst +
+				  txtarea.value.substring(endPos, txtarea.value.length);
+				txtarea.focus();
+				var cPos=startPos+(tagOpen.length+myText.length+tagClose.length);
+				txtarea.selectionStart=cPos;
+				txtarea.selectionEnd=cPos;
+				txtarea.scrollTop=scrollTop;
+			// All others
+			} else {
+				var copy_alertText=alertText;
+				var re1=new RegExp("\\$1","g");
+				var re2=new RegExp("\\$2","g");
+				copy_alertText=copy_alertText.replace(re1,sampleText);
+				copy_alertText=copy_alertText.replace(re2,tagOpen+sampleText+tagClose);
+				var text;
+				if (sampleText) {
+					text=prompt(copy_alertText);
+				} else {
+					text="";
+				}
+				if(!text) { text=sampleText;}
+				text=tagOpen+text+tagClose;
+				document.infoform.infobox.value=text;
+				// in Safari this causes scrolling
+				if(!is_safari) {
+					txtarea.focus();
+				}
+				this.noOverwrite=true;
+			}
+			// reposition cursor if possible
+			if (txtarea.createTextRange) txtarea.caretPos = document.selection.createRange().duplicate();
 		}
-		// now make the button visible or hidden as appropriate
-		if (disableLower && parseInt(siblings[i].value) <= revisionId) {
-			siblings[i].style.visibility = 'hidden';
-		} else if (!disableLower && parseInt(siblings[i].value) >= revisionId) {
-			siblings[i].style.visibility = 'hidden';
-		} else {
-			siblings[i].style.visibility = 'visible';
+	};
+}();
+JAMWiki.UI = function() {
+	return {
+		// enable/disable radio buttons before or after the current element
+		historyRadio: function(element, siblingName, disableLower) {
+			// since revision numbers are chronological this code compares revision 
+			// numbers to determine whether to display or hide a radio button
+			var revisionId = parseInt(element.value);
+			var siblings = document.getElementsByName(siblingName);
+			for (var i = 0; i < siblings.length; i++) {
+				// make sure the element is a radio button, if not skip it
+				if (siblings[i].type != 'radio') {
+					continue;
+				}
+				// now make the button visible or hidden as appropriate
+				if (disableLower && parseInt(siblings[i].value) <= revisionId) {
+					siblings[i].style.visibility = 'hidden';
+				} else if (!disableLower && parseInt(siblings[i].value) >= revisionId) {
+					siblings[i].style.visibility = 'hidden';
+				} else {
+					siblings[i].style.visibility = 'visible';
+				}
+			}
 		}
-	}
-}
-var JAMWiki = {};
+	};
+}();
 JAMWiki.Tabs = function() {
 	// Based on code by Matt Doyle http://www.elated.com/articles/javascript-tabs/.
 	var tabLinks = new Array();
