@@ -16,6 +16,7 @@ New Features:
   * Use the database rather than the search engine to generate results for the
     Special:LinkTo page.
   * Remove ability to automatically upgrade from versions prior to 0.8.0.
+  * Remove unused/obsolete Javascript and namespace the remaining code.
   * Upgrade to Spring Framework 3.0.3.RELEASE.
   * Upgrade to Spring Security 3.0.3.RELEASE.
   * Upgrade to Ehcache 2.1.0.
